--- a/career.html
+++ b/career.html
@@ -27,45 +27,45 @@
 
         <h1 class="mainheader">Work Experience</h1>
         <div class="left content">
-            <a href="https://cmu-17-214.github.io/s2023/" target="_blank"><img src="img/s3d.jpeg" /></a>
-            <h2><a href="https://cmu-17-214.github.io/s2023/" target="_blank">Carnegie Mellon University <br> Teaching Assistant for 17-214: <br> Principles of Software Construction: Objects, Design, and Concurrency</a></h2>
+            <img src="img/s3d.jpeg" />
+            <h2>Carnegie Mellon University <br> Teaching Assistant for 17-214: <br> Principles of Software Construction: Objects, Design, and Concurrency</h2>
+            <h3><a href="https://cmu-17-214.github.io/s2023/" target="_blank">Course Website</a></h3>
             <p>
             <i class="subtitle">Pittsburgh, PA  &#8226;  Jan. 2022 - May 2022 (Expected)</i>
             <br />
             <br />
             <ul>
-                <li>Taught weekly interactive recitation, held one to one office hours with students and answered questions on Piazza</li>
+                <li>Led weekly recitations and office hours supporting 150+ students in software design and development in Java</li>
             </ul>
             </p>
         </div>
 
         <div class="right content">
-            <a href="https://github.com/touretzkyds/KnowledgeGraphDemo/commit/1351dc4ac5f9ee4ae20e7c3e736e669ee0241078" target="_blank"><img src="img/dragon.png" /></a>
-            <h2><a href="https://github.com/touretzkyds/KnowledgeGraphDemo/commit/1351dc4ac5f9ee4ae20e7c3e736e669ee0241078" target="_blank">Carnegie Mellon University <br> Software Engineer Intern</a></h2>
+            <img src="img/dragon.png" />
+            <h2>Carnegie Mellon University <br> Software Engineer Intern</h2>
+            <h3><a href="https://github.com/touretzkyds/KnowledgeGraphDemo/commit/1351dc4ac5f9ee4ae20e7c3e736e669ee0241078" target="_blank">Project Link</a></h3>
             <p>
             <i class="subtitle">Pittsburgh, PA &#8226; Sep. 2022 - Jan. 2023</i>
             <br />
             <br />
             <ul>
-                <li>Created and maintained RDF Triplestore database of USA administrative divisions data on CMU server using Terse RDF Triple Language</li>
-                <li>Build interactive knowledge graph website to display USA administrative divisions data queried by SPARQL with smooth navigation using JavaScript, jQuery, Cytoscape.js with Cola.js extension</li>
-                <li>Clean up legacy code and documents and present weekly progress reports</li>
+                <li>Collaborated with Prof. Touretzky to develop an interactive knowledge graph web application that visualizes the relationships among USA regions using JavaScript, integrating data from RDF triplestore database</li>
+                <li>Incorporated Cytoscape.js to facilitate real-time selection, panning, zooming, and dragging of graph elements and Cola.js to automatically balance the the nodes and edges for visually appealing network layout</li>
+                <li>Developed an algorithm to enable geographic location identification through click recognition on map images and navigation tool for easy traversal of parent, children, and sibling nodes with a history feature/li>
             </ul>
             </p>
         </div>
 
         <div class="left content">
-            <a href="https://tutors.plus/" target="_blank"><img src="img/plus.svg" /></a>
-            <h2><a href="https://tutors.plus/" target="_blank">PLUS - Personalized Learning Squared <br> Software Engineer Intern</a></h2>
+            <img src="img/plus.svg" />
+            <h2>PLUS - Personalized Learning Squared <br> Software Engineer Intern</h2>
+            <h3><a href="https://tutors.plus/" target="_blank">Project Link</a></h3>
             <p>
             <i class="subtitle">Remote  &#8226;  May. 2022 - Sep. 2022</i>
             <br />
             <br />
             <ul>
-                <li>Implemented 10+ responsive static web page designs using HTML5, CSS3, JavaScript, jQuery, and Bootstrap framework to enable company rebranding and attracted 500+ new potential users</li>
-                <li>Created pipeline to validate user inputted contact information using JavaScript and store it in a Google Sheet</li>
-                <li>Automated MySQL database backup and other internal tasks periodically using bash scripts and Cron Job</li>
-                <li>Compiled release notes for each iteration to be published onto the webpage to announce recent updates</li>
+                <li>Transformed design team's Figma prototypes into 10+ responsive web pages in Agile environment for startup rebranding using HTML, CSS, JavaScript, Bootstrap, and jQuery, resulting in 20\%+ web traffic</li>
             </ul>
             </p>
         </div>
