--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <h1 class="mainheader">Terry Li</h1>
             <p>
                Hello! I'm Terry, a rising junior at Carnegie Mellon University
-               majoring in Information Systems, and I am passtionate about building scalable and extensible
-               softwares. I'm familiar with the entire software development
+               majoring in Information Systems. I am passtionate and capable of turning ideas
+               into high-quality software products. I'm familiar with the entire software development
                lifecycle and have considerable experience with full-stack web development, having
                worked on front end development at an Ed-tech startup and later build full-stack web app
                of knowledge graph project at Carnegie Mellon University School of Computer Science with 
@@ -65,14 +65,15 @@
                     <li>SQL</li>
                     <li>Bootstrap</li>
                     <li>React.js</li>
+                    <li>Express.js</li>
                     <li>Node.js</li>
                     <li>Rails</li>
                     <li>Flask</li>
+                    <li>FastAPI</li>
                     <li>PostgreSQL</li>
                     <li>MongoDB</li>
                     <li>Google Cloud</li>
                     <li>Amazon Web Services</li>
-                    <li>Azure</li>
                     <li>REST API</li>
                 </ul>
             </p>
