--- a/projects.html
+++ b/projects.html
@@ -28,50 +28,83 @@
         <h1 class="mainheader">Projects</h1>
 
         <div class="left content">
-            <a href="https://github.com/CMU-17-214/hw3-santorini-terryyLi" target="_blank"><img src="img/santorini.webp" class="whitebg" /></a>
-            <h2><a href="https://github.com/CMU-17-214/hw3-santorini-terryyLi" target="_blank">Santorini Game</a></h2>
+            <img src="img/santorini.webp" class="project-img"/>
+            <h2>Santorini Online Game</h2>
+            <h3><a href="https://github.com/terryyLi/Santorini" target="_blank">Github Link</a></h3>
             <p>
-                Full-stack web app game Santorini extensible for God cards and AI players with Java and TypeScript
+                Full-stack web-based santorini game of client-server architecture using Java for backend and React.js for frontend
             </p>
         </div>
 
         <div class="right content">
-            <a href="https://github.com/CMU-17-214/hw6-analytics-framework-mickeymiaomiao-house" target="_blank"><img src="img/text_classification.png" /></a>
-            <h2><a href="https://github.com/CMU-17-214/hw6-analytics-framework-mickeymiaomiao-house" target="_blank">Text Classification Visualization Framework</a></h2>
+            <img src="img/text_classification.png" class="project-img"/>
+            <h2>Text Classification Visualization Framework</h2>
+            <h3><a href="https://github.com/terryyLi/TopicViz-Text-Classify-Framework" target="_blank">Github Link</a></h3>
             <p>
-                Extensible black-box data visualization framework classifying texts from articles which supports data plugins extract texts; display plugins visualize entity analysis using Java and TypeScript
+                Extensible Java black-box text entity analysis framework that processes text data using Google NLP service and generates visualizations of topic frequency with Chart.js
             </p>
         </div>
 
         <div class="left content">
-            <a href="https://github.com/terryyLi/Youtube-Database" target="_blank"><img src="img/youtube.png" /></a>
-            <h2><a href="https://github.com/terryyLi/Youtube-Database" target="_blank">YouTube Database</a></h2>
+            <img src="img/ml-microservice.png" class="project-img"/>
+            <h2>Student Career Predict Service</h2>
+            <h3><a href="https://github.com/terryyLi/ML-microservice" target="_blank">Github Link</a> | <a href="https://ml-micro.fly.dev/docs" target="_blank">Service Link</a></h3>
+            <p>
+                A machine learning microservice powered by Python FastAPI predicting if a college student is a good fit for software engineer
+            </p>
+        </div>
+
+        <div class="right content">
+            <img src="img/note-sharing.png" class="project-img"/>
+            <h2>Note Sharing Platform</h2>
+            <h3><a href="https://github.com/terryyLi/Note-Sharing-Platform" target="_blank">Github Link</a> | <a href="https://main.df88uqyhfup8h.amplifyapp.com " target="_blank">Platform Link</a></h3>
+            <p>
+                AWS powered cloud note sharing platform amplify app where you can share images and notes
+            </p>
+        </div>
+
+        <div class="left content">
+            <img src="img/youtube.png" class="project-img"/>
+            <h2>YouTube Database</h2>
+            <h3><a href="https://github.com/terryyLi/Youtube-Database" target="_blank">Github Link</a></h3>
             <p>
                 Re-engineered early stages of YouTube database with a team of three explored development lifecycle
             </p>
         </div>
 
         <div class="right content">
-            <a href="https://github.com/terryyLi/AI_Bomberman" target="_blank"><img src="img/bombermen.jpeg" /></a>
-            <h2><a href="https://github.com/terryyLi/AI_Bomberman" target="_blank">AI Bomberman</a></h2>
+            <img src="https://static.tvtropes.org/pmwiki/pub/images/bomberman.png" class="project-img"/>
+            <h2>AI Bomberman</h2>
+            <h3><a href="https://github.com/terryyLi/AI-Bomberman" target="_blank">Github Link</a></h3>
             <p>
-                Bomberman game with AI player to visualize pathfinding algorithms from scratch using Python.
+                Bomberman game with AI player to visualize pathfinding algorithms using Python.
             </p>
         </div>
 
         <div class="left content">
-            <a href="https://github.com/terryyLi/Pamela-s-website" target="_blank"><img src="img/pamela.webp" /></a>
-            <h2><a href="https://github.com/terryyLi/Pamela-s-website" target="_blank">Pamela's Diner</a></h2>
+            <img src="img/pamela.webp" class="project-img"/>
+            <h2>Pamela's Diner</h2>
+            <h3><a href="https://github.com/terryyLi/Pamela-s-website" target="_blank">Github Link</a></h3>
             <p>
-                Renovated Pamela's Diner's website from scratch using HTML5, CSS3, and JavaScript.
+                Renovated Pamela's Diner's website using HTML5, CSS3, and JavaScript.
             </p>
         </div>
 
         <div class="right content">
-            <a href="https://github.com/terryyLi/MySQL_backup" target="_blank"><img src="img/sql_backup.png" /></a>
-            <h2><a href="https://github.com/terryyLi/MySQL_backup" target="_blank">SQL Backup</a></h2>
+            <img src="img/sql_backup.png" class="project-img"/>
+            <h2>SQL Backup</h2>
+            <h3><a href="https://github.com/terryyLi/MySQL-backup" target="_blank">Github Link</a></h3>
             <p>
                 A shell script to backup MySQL database automatically
+            </p>
+        </div>
+
+        <div class="left content">
+            <img src="img/dronut.png" class="project-img"/>
+            <h2>Dronut</h2>
+            <h3><a href="https://cmu-17-356.github.io/dronuts-2023-soarin-donuts/" target="_blank">App Link</a></h3>
+            <p>
+                A cloud-based delivery platform where customers can order donut and employees assign drones for delivery
             </p>
         </div>
 
