updated nodebb project

--- a/projects.html
+++ b/projects.html
@@ -47,10 +47,10 @@
 
         <div class="left content">
             <img src="img/ml-microservice.png" class="project-img"/>
-            <h2>Student Career Predict Service</h2>
+            <h2>Nodebb Student Career Predict Service</h2>
             <h3><a href="https://github.com/terryyLi/ML-microservice" target="_blank">Github Link</a> | <a href="https://ml-micro.fly.dev/docs" target="_blank">Service Link</a></h3>
             <p>
-                A machine learning microservice powered by Python FastAPI predicting if a college student is a good fit for software engineer
+                Deployed a Python-based microservice and integrated it with NodeBB's existing monolithic structure through a REST API, achieving an accuracy rate of 83.2%
             </p>
         </div>
 
