updated nodebb website

--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
         <div class="left content">
             <img src="img/ml-microservice.png" class="project-img"/>
             <h2>Nodebb Student Career Predict Service</h2>
-            <h3><a href="https://github.com/terryyLi/ML-microservice" target="_blank">Github Link</a> | <a href="https://ml-micro.fly.dev/docs" target="_blank">Service Link</a></h3>
+            <h3><a href="https://github.com/terryyLi/ML-microservice" target="_blank">Github Link</a> | <a href="https://miami.fly.dev/career" target="_blank">Website Link</a></h3>
             <p>
                 Deployed a Python-based microservice and integrated it with NodeBB's existing monolithic structure through a REST API, achieving an accuracy rate of 83.2%
             </p>
@@ -57,7 +57,7 @@
         <div class="right content">
             <img src="img/note-sharing.png" class="project-img"/>
             <h2>Note Sharing Platform</h2>
-            <h3><a href="https://github.com/terryyLi/Note-Sharing-Platform" target="_blank">Github Link</a> | <a href="https://main.df88uqyhfup8h.amplifyapp.com " target="_blank">Platform Link</a></h3>
+            <h3><a href="https://github.com/terryyLi/Note-Sharing-Platform" target="_blank">Github Link</a> | <a href="https://main.df88uqyhfup8h.amplifyapp.com " target="_blank">Website Link</a></h3>
             <p>
                 AWS powered cloud note sharing platform amplify app where you can share images and notes
             </p>
@@ -102,7 +102,7 @@
         <div class="left content">
             <img src="img/dronut.png" class="project-img"/>
             <h2>Dronut</h2>
-            <h3><a href="https://cmu-17-356.github.io/dronuts-2023-soarin-donuts/" target="_blank">App Link</a></h3>
+            <h3><a href="https://cmu-17-356.github.io/dronuts-2023-soarin-donuts/" target="_blank">Website Link</a></h3>
             <p>
                 A cloud-based delivery platform where customers can order donut and employees assign drones for delivery
             </p>
