added meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <title>Terry Li</title>
+        <meta name="description" content="Welcome to the online portfolio of Terry Li, a skilled web developer and software engineer. Explore my website to discover my expertise in creating modern and responsive websites that deliver seamless user experiences. Contact me today to discuss your next web development project.">
         <link rel="stylesheet" href="https://use.typekit.net/kwf1fnc.css" />
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" type="image/x-icon" href="img/placeholder.png" />
