--- a/career.html
+++ b/career.html
@@ -65,7 +65,7 @@
             <br />
             <br />
             <ul>
-                <li>Transformed design team's Figma prototypes into 10+ responsive web pages in Agile environment for startup rebranding using HTML, CSS, JavaScript, Bootstrap, and jQuery, resulting in 20\%+ web traffic</li>
+                <li>Transformed design team's Figma prototypes into 10+ responsive web pages in Agile environment for startup rebranding using HTML, CSS, JavaScript, Bootstrap, and jQuery, resulting in 20%+ web traffic</li>
             </ul>
             </p>
         </div>
