--- a/education.html
+++ b/education.html
@@ -29,7 +29,7 @@
 
         <div class="left content">
             <img src="img/cmu.png" />
-            <h2><a href="https://www.cmu.edu/" target="_blank">Carnegie Mellon University</a></h2>
+            <h2>Carnegie Mellon University</h2>
 
             <p>
                 <i class="subtitle">B.S. in Information Systems, 2021-2025</i>
